--- a/main.html
+++ b/main.html
@@ -4,10 +4,11 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<caption>Student Details</caption>
 </head>
 
 <body>
-	<table border= 1px >
+	<table border= 1px style="background-color:yellow;">
 		<tr>
 			<th>NAME</th>
 			<th>AGE</th>
