--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-	<table border= 1px style="background-color:yellow;">
+	<table border= 1px style="background-color:rgb(255, 255, 0);">
 		<tr>
 			<th>NAME</th>
 			<th>AGE</th>
