--- a/main.html
+++ b/main.html
@@ -4,11 +4,12 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
-	<caption>Student Details</caption>
+	
 </head>
 
 <body>
-	<table border= 1px style="background-color:rgb(255, 255, 0);">
+	<table border= 1px style="background-color:rgb(255, 255, 0)">
+		<caption>Student Details</caption>
 		<tr>
 			<th>NAME</th>
 			<th>AGE</th>
