--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 
 <body>
 	<table border= 1px style="background-color:rgb(255, 255, 0)">
-		<caption>Student Details</caption>
+		<caption><b>Student Details</b></caption>
 		<tr>
 			<th>NAME</th>
 			<th>AGE</th>
