--- a/main.html
+++ b/main.html
@@ -16,14 +16,16 @@
 			<th>BRANCH</th>
 </tr>
 		<tr>
-			<td>shaw</td>
-			<td>20</td>
-			<td>CSE</td>
+			
+			<td><b>shaw</td>
+			<td><b>20</td>
+			<td><b>CSE</td>
+		
 		</tr>
 		<tr>
-			<td>Adil</td>
-			<td>21</td>
-			<td>ECE</td>
+			<td><b>Adil</td>
+			<td><b>21</td>
+			<td><b>ECE</td>
 		</tr>
 	</table>
     <script type="text/javascript" src="./script.js">
