--- a/main.html
+++ b/main.html
@@ -1,35 +1,30 @@
-<!DOCTYPE html>
-
 <html>
 
 <head>
-	<link rel="stylesheet" href="styles.css">
-	
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-	<table border= 1px style="background-color:rgb(255, 255, 0)">
-		<caption><b>Student Details</b></caption>
-		<tr>
-			<th>NAME</th>
-			<th>AGE</th>
-			<th>BRANCH</th>
-</tr>
-		<tr>
-			
-			<td><b>shaw</td>
-			<td><b>20</td>
-			<td><b>CSE</td>
-		
-		</tr>
-		<tr>
-			<td><b>Adil</td>
-			<td><b>21</td>
-			<td><b>ECE</td>
-		</tr>
-	</table>
-    <script type="text/javascript" src="./script.js">
-</script>
+
+    <table border>
+        <tr>
+            <th>Roll number</th>
+            <th>Name</th>
+        </tr>
+
+        <tr>
+            <td>1234</td>
+            <td>hemanth</td>
+        </tr>
+
+        <tr>
+            <td>5678</td>
+            <td>Arjun</td>
+        </tr>
+
+    </table>
+    <!-- the entire body must be written by student -->
+    <script type="text/javascript" src="./script.js"></script>
 
 </body>
 
