--- a/main.html
+++ b/main.html
@@ -1,28 +1,42 @@
 <html>
 
 <head>
+	<style>
+		table{
+			background-color: yellow;
+		}
+		</style>
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
 
-    <table border>
+  
+    <table border background-color: yellow;>
+        <caption><b>The Student Details</b></caption>
+        <thead>
         <tr>
-            <th>Roll number</th>
-            <th>Name</th>
+            <th>NAME</th>
+            <th>AGE</th>
+            <th>BRANCH</th>
         </tr>
+        </thead>
 
-        <tr>
-            <td>1234</td>
-            <td>hemanth</td>
-        </tr>
+        <tbody>
+            <tr>
+                <td>Shaw</td>
+                <td>20</td>
+                <td>CSE</td>
+            </tr>
 
-        <tr>
-            <td>5678</td>
-            <td>Arjun</td>
-        </tr>
-
+            <tr>
+                <td>Adil</td>
+                <td>21</td>
+                <td>ECE</td>
+            </tr>
+        </tbody>
     </table>
+    
     <!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js"></script>
 
