--- a/main.html
+++ b/main.html
@@ -12,8 +12,8 @@
 <body>
 
   
-    <table border background-color: yellow;>
-        <caption><b>The Student Details</b></caption>
+    <table border 1px background-color: yellow;>
+        <caption><b>Student Details</b></caption>
         <thead>
         <tr>
             <th>NAME</th>
