--- a/main.html
+++ b/main.html
@@ -4,6 +4,8 @@
 	<style>
 		table{
 			background-color: yellow;
+			border: 1px solid rgb(0, 0, 0);
+			
 		}
 		</style>
     <link rel="stylesheet" href="styles.css">
